# mail-auth-check

./: .gitignore  LICENSE  README.md  pyproject.toml
mail_auth_check/: __init__.py  checks.py  cli.py
